CASMCMS-8227 - Add platform and dkms information to data classes.
