# src/server/models/jobs.py
@@ -32,6 +32,8 @@ import uuid
 from marshmallow import Schema, fields, post_load, RAISE
 from marshmallow.validate import OneOf, Length, Range
 
+from src.server.helper import PLATFORM_X86_64, PLATFORM_ARM64
+
 JOB_TYPE_CREATE = 'create'
 JOB_TYPE_CUSTOMIZE = 'customize'
 
@@ -72,8 +74,10 @@ class V2JobRecord:
                  kubernetes_configmap=None, enable_debug=False,
                  build_env_size=None, image_root_archive_name=None, kernel_file_name=None,
                  initrd_file_name=None, resultant_image_id=None, ssh_containers=None,
-                 kubernetes_namespace=None, kernel_parameters_file_name=None):
+                 kubernetes_namespace=None, kernel_parameters_file_name=None, require_dkms=False,
+                 platform=PLATFORM_X86_64):
         # Supplied
+        # v2.0
         self.job_type = job_type
         self.artifact_id = artifact_id
         self.public_key_id = public_key_id
@@ -84,8 +88,12 @@ class V2JobRecord:
         self.kernel_parameters_file_name = kernel_parameters_file_name or DEFAULT_KERNEL_PARAMETERS_FILE_NAME
         self.resultant_image_id = resultant_image_id
         self.ssh_containers = ssh_containers
+        
+        # v2.1
+        self.require_dkms = require_dkms
 
         # derived
+        # v2.0
         self.id = id or uuid.uuid4()
         self.created = created or datetime.datetime.now()
         self.status = status or JOB_STATUS_CREATING
@@ -94,6 +102,9 @@ class V2JobRecord:
         self.kubernetes_service = kubernetes_service
         self.kubernetes_configmap = kubernetes_configmap
         self.kubernetes_namespace = kubernetes_namespace
+
+        # v2.1
+        self.platform = platform
 
     def __repr__(self):
         return '<v2JobRecord(id={self.id!r})>'.format(self=self)
@@ -139,6 +150,9 @@ class V2JobRecordInputSchema(Schema):
                    validate=Length(min=1, error="kernel_parameters_file_name field must not be blank"))
 
     ssh_containers = fields.List(fields.Nested(SshContainerInputSchema()), allow_none=True)
+
+    require_dkms = fields.Boolean(required=False, default=False, load_default=True, dump_default=True,
+                                  description="Job requires the use of dkms")
 
     @post_load
     def make_job(self, data):
@@ -190,7 +204,8 @@ class V2JobRecordSchema(V2JobRecordInputSchema):
     resultant_image_id = fields.UUID(allow_none=True,
                                      description="the unique id of the resultant image record")
     ssh_containers = fields.List(fields.Nested(SshContainerSchema()), allow_none=True)
-
+    platform = fields.Str(required=False, description="Architecture of the job", default=PLATFORM_X86_64,
+                          validate=OneOf([PLATFORM_ARM64,PLATFORM_X86_64]), load_default=True, dump_default=True)
 
 class V2JobRecordPatchSchema(Schema):
     """
